css/base.css
/* Base Styles */
html, body {
    color: #ffffffa6;
    min-height: 100vh;
    width: 100%;
    background: linear-gradient(to top, #212529 0%, black 100%);
    background-size: 100% 100%;
    background-attachment: fixed;
    position: relative;
}

html {
    overscroll-behavior-x: none;
    overflow-x: hidden;
}

/* Navbar */
.navbar {
    background-image: linear-gradient(to bottom, #212529 0%, black 100%);
    padding: 15px;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    height: 95px;
    /*-webkit-box-shadow: inset 0 2px 0 #fff, 0 5px 10px rgb(0, 0, 0);
        These two cause problems
    top: -2px !important;*/
}

.navbar > .container-fluid,
.navbar > .container-fluid > .navbar-brand,
.navbar > .container-fluid > .navbar-brand > img {
    height: 55px;
    padding: 0;
    margin: 0;
}

#featureSearchInfo {
    font-size: 8pt;
    text-align: center;
}

.navbar-toggler,
.navbar-toggler:hover,
.navbar-toggler:focus {
    border: 0;
}

.navbar-toggler > .bi-list {
    color: white;
    font-size: 24pt;
}

.navbar-nav {
    padding: 0!important;
}

.offcanvas-title {
    text-align: left;
    color: #fffee6;
    font-size: 24pt;
}

.offcanvas {
    background-image: linear-gradient(to bottom, #212529 75%, black 100%);
}

.blue-outline,
.green-outline {
    padding-left: 5px;
    padding-right: 5px;
    padding-top: 2pt;
    padding-bottom: 3pt;
    border: 2px solid;
    border-radius: 10pt;
}

.green-outline {
    border-color: green;
    background: rgba(0, 128, 0, 0.5);
}

.blue-outline {
    border-color: blue;
    background: rgba(0, 0, 255, 0.5);
}

.popover-header {
    line-height: 22pt;
}

.popover {
    border: 2px solid rgb(50, 53, 57);
    border-radius: 15px;
}

/* Base styles */
p {
    font-size: 12pt;
    padding-left: 10px;
    padding-right: 10px;
}

.main-content {
    min-height: 90vh;
}

.row { /* Bootstrap pushes margin to -12px for some reason */
    margin-left: 0;
    margin-right: 0;
}


/* Accordions */
.accordion-button {
    color: #dee2e6 !important;
    background-color: #212529;
}

.accordion-button::after {
    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
}

.accordion-button:not(.collapsed) {
    color: #212529 !important;
    background-color: #dee2e6;
}

.accordion-button:not(.collapsed):after {
    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000000'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
}

.accordion-button:focus {
    box-shadow: none;
}

.accordion-button:hover {
    box-shadow: 0 0 0 0.25rem rgba(0, 0, 0, 0.4);
}

.accordion-button:hover:not(.collapsed) {
    box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.25);
}

.accordion-body img {
    height: 24pt;
}

/* Footer */
footer {
    background-color: #121212;
    border-top: 5px solid #353535;
    position: relative;
}

.footer-contain {
    padding: 0;
}

.footer-contain .row {
    width: 100%;
}

.footer-text {
    color: #fffee6;
    text-decoration: 0;
}

.footer-text-large {
    font-size: 18pt;
}

.footer-link {
    color: #ffffffa6;
    text-decoration: none;
    margin: 5px;
}

.footer-link:hover {
    color: #ffffffcc;
}

.footer-text.justify-content-start,
.footer-text.justify-content-end {
    padding-left: 6px;
    padding-right: 6px;
}

